microservices/tx-validation/kubernetes_resources/service-tfm.yaml
apiVersion: v1
kind: Service
metadata:
  name: tx-validator
  namespace: tfm
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tx-validator
  sessionAffinity: None
